--- a/prog3-battleship/.classpath
+++ b/prog3-battleship/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="pre-test"/>
 	<classpathentry kind="lib" path="lib/gif4j_light_trial_1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
